--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
+    "chart.js": "^3.7.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
