--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "chart.js": "^3.7.1",
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue3-toastify": "^0.2.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
