--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
-    "chart.js": "^3.7.1",
+    "chart.js": "^4.4.6",
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.12",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.5",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-toastify": "^0.2.5",
